Ball position, movement, wall collision detection

--- a/Ultimate Pong/Ultimate Pong.vcxproj
+++ b/Ultimate Pong/Ultimate Pong.vcxproj
@@ -84,6 +84,8 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>
+      </LanguageStandard>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
